--- a/_sass/components/footer.sass
+++ b/_sass/components/footer.sass
@@ -1,12 +1,12 @@
 .footer-main
     border-top: 1px solid $epsilon
-    padding: 40px 0
-    margin: 40px 0 0
+    padding: 20px 0
     font-size: 1.3rem
     color: $gama
     font-weight: 300
     text-align: center
     position: relative
+    clear: both
 
     &:before
         display: block
@@ -21,6 +21,7 @@
         background: #FFF
         box-shadow: #FFF 0 0 0 5px
         border-radius: 3px
+        display: none
 
     > .link
         display: inline
