--- a/_sass/components/social-links.sass
+++ b/_sass/components/social-links.sass
@@ -1,13 +1,13 @@
 .social-links
-    margin-top: 20px
+    margin: 20px 20px 0 0
+    float: right
 
     > .link
         margin: 0
         text-decoration: none
         position: relative
         display: inline-block
-        height: 35px
-        width: 35px
+        padding: 0 10px
 
         &:hover
             > .icon
@@ -24,7 +24,7 @@
             display: none
             position: absolute
             bottom: -34px
-            left: -6px
+            right: 6px
             margin: 0 auto
             font-size: 13px
             padding: 3px 10px
