--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -127,7 +127,8 @@ pre
 		width: 88%
 
 .wrapper-normal
-	max-width: 560px
+	max-width: 510px
+	margin-top: 150px
 
 .wrapper-large
 	max-width: 810px
