--- a/_sass/base/helpers.sass
+++ b/_sass/base/helpers.sass
@@ -25,8 +25,8 @@
 @keyframes fade-in-down
 	0%
 		opacity: 0
-		transform: translateY(-10px)
+		transform: translateX(0)
 
 	100%
 		opacity: 1
-		transform: translateY(0)
+		transform: translateX(0)
