--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -19,13 +19,18 @@
     position: absolute
     right: 0
     top: 0
+    width: 100%
+    background: #000
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 3)
 
     > .list
         padding: 0 13px 0
+        float: left
 
         > .item > .link
             font-size: 1.4rem
             padding: 20px 10px
+            color: #fff
 
 .nav-home
     margin-top: 40px
