--- a/_sass/components/others.sass
+++ b/_sass/components/others.sass
@@ -13,12 +13,12 @@
 
 .icon
     display: inline-block
-    width: 17px
-    height: 17px
-    fill: #000
+    width: 15px
+    height: 15px
+    fill: #fff
     text-align: center
-    color: #000
-    margin: 7px auto
+    color: #fff
+    margin: 5px auto
 
 .caption
     position: relative
