--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,5 +50,6 @@ layout: compress
 
     {% include icons.html %}
 
+    <script id="dsq-count-scr" src="//rearcar92.disqus.com/count.js" async></script>
 </body>
 </html>
