--- a/_includes/favicon.html
+++ b/_includes/favicon.html
@@ -1,3 +1,5 @@
+
+<link rel="icon" href="{{ site.url }}/assets/images/favicon/favicon.ico">
 <link rel="apple-touch-icon" sizes="57x57" href="{{ site.url }}/assets/images/favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="{{ site.url }}/assets/images/favicon/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="{{ site.url }}/assets/images/favicon/apple-icon-72x72.png">
