--- a/_sass/pages/home-blog-projects.sass
+++ b/_sass/pages/home-blog-projects.sass
@@ -10,7 +10,7 @@
         position: relative
 
         &:before
-            display: block
+            display: none
             content: " "
             width: 7px
             height: 7px
