--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -32,6 +32,12 @@
             padding: 20px 10px
             color: #fff
 
+            &:hover
+                transform: scale(1.2)
+                transition: all .3s
+                color: #eaeaea
+                fill: currentColor
+
 .nav-home
     margin-top: 40px
     text-align: center
