--- a/_sass/components/social-links.sass
+++ b/_sass/components/social-links.sass
@@ -11,7 +11,10 @@
 
         &:hover
             > .icon
-                fill: $delta
+                color: #eaeaea
+                fill: currentColor
+                transform: scale(1.5)
+                transition: all .3s
 
         &:hover:before
             opacity: 1
