--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,14 +3,14 @@
     <ul class="list">
         {% if page.title != "Home" %}
             <li class="item">
-                <a class="link" href="{{ site.url }}/story">Home</a>
+                <a class="link" href="{{ site.url }}">Home</a>
             </li>
         {% endif %}
 
         {% if site.blog == true %}
             {% if page.title != "Blog" %}
                 <li class="item">
-                    <a class="link" href="{{ site.url }}/story/blog">Blog</a>
+                    <a class="link" href="{{ site.url }}/blog">Blog</a>
                 </li>
             {% endif %}
         {% endif %}
@@ -18,7 +18,7 @@
         {% if site.projects == true %}
             {% if page.title != "Projects" %}
                 <li class="item">
-                    <a class="link" href="{{ site.url }}/story/projects">Projects</a>
+                    <a class="link" href="{{ site.url }}/projects">Projects</a>
                 </li>
             {% endif %}
         {% endif %}
@@ -26,7 +26,7 @@
         {% if site.about == true %}
             {% if page.title != "About" %}
                 <li class="item">
-                    <a class="link" href="{{ site.url }}/story/about">About</a>
+                    <a class="link" href="{{ site.url }}/about">About</a>
                 </li>
             {% endif %}
         {% endif %}
